--- a/package.json
+++ b/package.json
@@ -1,11 +1,31 @@
 {
   "name": "posnet",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "Module for posnet Polish fiscal printer",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:EduardKarnaukh/posnet-node.git"
+  },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EduardKarnaukh/posnet-node/issues"
+  },
+  "homepage": "https://github.com/EduardKarnaukh/posnet-node#readme",
+  "devDependencies": {
+    "@types/node": "^18.7.14",
+    "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.5",
+    "serialport": "^10.4.0"
+  }
 }
