--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "dayjs": "^1.11.5",
-    "serialport": "^10.4.0"
+    "serialport": "^10.4.0",
+    "single-byte": "^1.0.7"
   }
 }
